@@ -1,12 +1,13 @@
 package com.gestioninventariodemo2.cruddemo2.Services;
 
 import java.io.ByteArrayOutputStream;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 
 import org.springframework.stereotype.Service;
 
 import com.gestioninventariodemo2.cruddemo2.DTO.ProductoInventarioDTO;
-import com.gestioninventariodemo2.cruddemo2.DTO.PdfReportRequestDTO;
 import com.itextpdf.kernel.colors.ColorConstants;
 import com.itextpdf.kernel.colors.DeviceRgb;
 import com.itextpdf.kernel.events.Event;
@@ -18,7 +19,6 @@ import com.itextpdf.kernel.pdf.PdfPage;
 import com.itextpdf.kernel.pdf.PdfWriter;
 import com.itextpdf.kernel.pdf.canvas.PdfCanvas;
 import com.itextpdf.layout.Document;
-import com.itextpdf.layout.borders.Border;
 import com.itextpdf.layout.element.Cell;
 import com.itextpdf.layout.element.Paragraph;
 import com.itextpdf.layout.element.Table;
@@ -31,92 +31,75 @@ import com.itextpdf.kernel.geom.Rectangle;
 @Service
 public class PdfReportService {
 
-    public byte[] generarReporteInventarioPdf(PdfReportRequestDTO request) {
+    public byte[] generarReporteInventarioPdf(List<ProductoInventarioDTO> productos, String filtrosAplicados, String sortDescripcion) {
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
 
         try {
             PdfWriter writer = new PdfWriter(baos);
             PdfDocument pdf = new PdfDocument(writer);
-            // Documento A4
             Document document = new Document(pdf, PageSize.A4);
-            
-            // Margenes: top, right, bottom, left
             document.setMargins(36, 36, 50, 36);
-
-            // Numerador de páginas en el pie original (IEventHandler)
             pdf.addEventHandler(PdfDocumentEvent.END_PAGE, new PageEvent());
 
-            // 1. Encabezado de la librería
-            Paragraph titulo = new Paragraph("Librería - Reporte de Inventario")
-                    .setBold()
-                    .setFontSize(18)
-                    .setTextAlignment(TextAlignment.CENTER)
-                    .setMarginBottom(5);
-            document.add(titulo);
+            // 1. Título
+            document.add(new Paragraph("Librería - Reporte de Inventario")
+                    .setBold().setFontSize(18)
+                    .setTextAlignment(TextAlignment.CENTER).setMarginBottom(4));
 
             // 2. Filtros aplicados
-            String textoFiltros = (request.getFiltrosAplicados() == null || request.getFiltrosAplicados().trim().isEmpty()) 
-                                    ? "Todos" : request.getFiltrosAplicados();
-            Paragraph subtitulo = new Paragraph("Filtros aplicados: " + textoFiltros)
-                    .setFontSize(11)
-                    .setFontColor(ColorConstants.DARK_GRAY)
-                    .setTextAlignment(TextAlignment.CENTER)
-                    .setMarginBottom(15);
-            document.add(subtitulo);
+            String textoFiltros = (filtrosAplicados == null || filtrosAplicados.isBlank()) ? "Todos" : filtrosAplicados;
+            document.add(new Paragraph("Filtros aplicados: " + textoFiltros)
+                    .setFontSize(10).setFontColor(ColorConstants.DARK_GRAY)
+                    .setTextAlignment(TextAlignment.CENTER).setMarginBottom(2));
 
-            // 3. Tabla: Nombre, Categoría, Stock Actual, Stock Mínimo, Proveedor (con tel), Precio Costo Unitario
-            float[] columnWidths = {2.5f, 2, 1.2f, 1.2f, 1.8f, 1.3f};
-            Table table = new Table(UnitValue.createPercentArray(columnWidths))
-                                .useAllAvailableWidth();
+            // 3. Ordenamiento activo
+            if (sortDescripcion != null && !sortDescripcion.isBlank()) {
+                document.add(new Paragraph(sortDescripcion)
+                        .setFontSize(10).setFontColor(ColorConstants.DARK_GRAY)
+                        .setTextAlignment(TextAlignment.CENTER).setMarginBottom(2));
+            }
 
-            // Asegurar que los encabezados se repitan
-            // En iText7 esto se logra automáticamente al definir encabezados de tabla
-            
-            // Colores
+            // 4. Fecha y hora de generación
+            String fechaHora = LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm"));
+            document.add(new Paragraph("Generado el: " + fechaHora)
+                    .setFontSize(9).setFontColor(ColorConstants.GRAY)
+                    .setTextAlignment(TextAlignment.CENTER).setMarginBottom(14));
+
+            // 5. Tabla: 7 columnas
+            float[] columnWidths = {2.5f, 1.5f, 1.2f, 1.2f, 1.5f, 1.3f, 1.3f};
+            Table table = new Table(UnitValue.createPercentArray(columnWidths)).useAllAvailableWidth();
+
             DeviceRgb headerGray = new DeviceRgb(230, 230, 230);
-            
-            // Construir encabezados
-            String[] headers = {"Nombre", "Categoría", "Stock Actual", "Stock Mín.", "Proveedor / Tel.", "Costo Uni."};
+            String[] headers = {"Nombre", "Categoría", "Stock Actual", "Stock Mín.", "Proveedor / Tel.", "Precio Venta", "Costo Uni."};
             for (String h : headers) {
-                Cell headerCell = new Cell()
+                table.addHeaderCell(new Cell()
                         .add(new Paragraph(h).setBold().setFontSize(9))
                         .setBackgroundColor(headerGray)
                         .setTextAlignment(TextAlignment.CENTER)
                         .setVerticalAlignment(VerticalAlignment.MIDDLE)
-                        .setPadding(4);
-                table.addHeaderCell(headerCell);
+                        .setPadding(4));
             }
 
-            // Filas
-            List<ProductoInventarioDTO> list = request.getProductos();
-            if (list == null || list.isEmpty()) {
-                Cell emptyCell = new Cell(1, 6)
+            if (productos == null || productos.isEmpty()) {
+                table.addCell(new Cell(1, 7)
                         .add(new Paragraph("No se encontraron productos con los filtros seleccionados."))
-                        .setTextAlignment(TextAlignment.CENTER)
-                        .setPadding(10);
-                table.addCell(emptyCell);
+                        .setTextAlignment(TextAlignment.CENTER).setPadding(10));
             } else {
-                for (ProductoInventarioDTO p : list) {
-                    // Nombre
-                    table.addCell(new Cell().add(new Paragraph(p.getNombre() != null ? p.getNombre() : "-").setFontSize(8)).setPadding(3));
-                    // Categoría
-                    table.addCell(new Cell().add(new Paragraph(p.getCategoria() != null ? p.getCategoria() : "-").setFontSize(8)).setPadding(3));
-                    // Stock Actual (Centrado)
-                    table.addCell(new Cell().add(new Paragraph(String.valueOf(p.getStockActual())).setFontSize(8))
-                            .setTextAlignment(TextAlignment.CENTER).setPadding(3));
-                    // Stock Mínimo (Centrado)
-                    table.addCell(new Cell().add(new Paragraph(String.valueOf(p.getStockMinimo())).setFontSize(8))
-                            .setTextAlignment(TextAlignment.CENTER).setPadding(3));
-                    // Proveedor / Teléfono
+                for (ProductoInventarioDTO p : productos) {
                     String prov = p.getProveedorNombre() != null ? p.getProveedorNombre() : "-";
                     if (p.getProveedorTelefono() != null && !p.getProveedorTelefono().isBlank()) {
                         prov += "\nTel: " + p.getProveedorTelefono();
                     }
-                    table.addCell(new Cell().add(new Paragraph(prov).setFontSize(8)).setPadding(3));
-                    // Precio Costo Unitario (Alineado a la derecha)
+                    String precioVenta = p.getPrecio() > 0 ? String.format("$%.2f", p.getPrecio()) : "-";
                     String costo = p.getPrecioCosto() != null ? String.format("$%.2f", p.getPrecioCosto()) : "-";
-                    table.addCell(new Cell().add(new Paragraph(costo).setFontSize(8))
-                            .setTextAlignment(TextAlignment.RIGHT).setPadding(3));
+
+                    table.addCell(new Cell().setKeepTogether(true).add(new Paragraph(p.getNombre() != null ? p.getNombre() : "-").setFontSize(8)).setPadding(3));
+                    table.addCell(new Cell().setKeepTogether(true).add(new Paragraph(p.getCategoria() != null ? p.getCategoria() : "-").setFontSize(8)).setPadding(3));
+                    table.addCell(new Cell().setKeepTogether(true).add(new Paragraph(String.valueOf(p.getStockActual())).setFontSize(8)).setTextAlignment(TextAlignment.CENTER).setPadding(3));
+                    table.addCell(new Cell().setKeepTogether(true).add(new Paragraph(String.valueOf(p.getStockMinimo())).setFontSize(8)).setTextAlignment(TextAlignment.CENTER).setPadding(3));
+                    table.addCell(new Cell().setKeepTogether(true).add(new Paragraph(prov).setFontSize(8)).setPadding(3));
+                    table.addCell(new Cell().setKeepTogether(true).add(new Paragraph(precioVenta).setFontSize(8)).setTextAlignment(TextAlignment.RIGHT).setPadding(3));
+                    table.addCell(new Cell().setKeepTogether(true).add(new Paragraph(costo).setFontSize(8)).setTextAlignment(TextAlignment.RIGHT).setPadding(3));
                 }
             }
 
